tests/expectations/compiler/scalar/no_space_between_literal.out
DCE_ENABLED:
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:4:13
     |
   4 |       let f = 1 scalar;
     |             ^
DCE_DISABLED:
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:4:13
     |
   4 |       let f = 1 scalar;
     |             ^